--- a/Counter/Counter.csproj
+++ b/Counter/Counter.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>IMG_1046.ico</ApplicationIcon>
   </PropertyGroup>
 
 </Project>
